@@ -1,2 +1,2 @@
 # tower-defense-game
-Kolaydı
+"vmArgs": "--module-path /path_to_javafx/lib --add-modules javafx.controls,javafx.fxml,javafx.media,javafx.media"
